--- a/Assignments/module-3/index.html
+++ b/Assignments/module-3/index.html
@@ -33,8 +33,8 @@
 
     <div class="collapse" id="myNavbar">
       <ul class="nav navbar-nav visible-xs">
-        <li><a class="menu-item" href="#">Chicken</a></li>
-        <li><a class="menu-item" href="#">Beef</a></li> 
+        <li><a class="menu-item" href="#">Vegetable</a></li>
+        <li><a class="menu-item" href="#">Raddish</a></li> 
         <li><a class="menu-item" href="#">Sushi</a></li> 
       </ul>
     </div>
@@ -51,14 +51,18 @@
   <div class="col-lg-4 col-md-6 col-sm-12">
     <div class="content-box">
       <p class="item-name">Chicken</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="#top">(Back to Top)</a></p>
+      <p>Vegetables are parts of plants that are consumed by humans or other animals as food. The original meaning is still commonly used and is applied to plants collectively to refer to all edible plant matter, including the flowers, fruits, stems, leaves, roots, and seeds. An alternate definition of the term is applied somewhat arbitrarily, often by culinary and cultural tradition. I<a href="#top">(Back to Top)</a></p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 col-sm-12">
     <div class="content-box">
-      <p class="item-name">Beef</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="#top">(Back to Top)</a></p>
+      <p class="item-name">Raddish</p>
+      <p>Radishes are a group of root vegetables with light-colored, crunchy flesh, variable skin color, and an almost spicy, peppery taste. 
+
+        Eaten raw, radishes have a zesty, somewhat spicy taste. This flavor is caused by enzymes that are also found in mustard, horseradish, and wasabi. Cooking a radish dulls the pungent flavor and brings out an earthy, sweet taste.
+        
+        Here are some ways to incorporate radishes into your diet:<a href="#top">(Back to Top)</a></p>
     </div>
   </div>
 
