--- a/Assignments/module-3/index.html
+++ b/Assignments/module-3/index.html
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
       </button>
-      <a class="navbar-brand" href="#">Food, LLC</a>
+      <a class="navbar-brand" href="#">Khana.inc</a>
     </div>
 
     <div class="collapse" id="myNavbar">
