--- a/Assignments/module-3/index.html
+++ b/Assignments/module-3/index.html
@@ -33,8 +33,8 @@
 
     <div class="collapse" id="myNavbar">
       <ul class="nav navbar-nav visible-xs">
-        <li><a class="menu-item" href="#">Vegetable</a></li>
-        <li><a class="menu-item" href="#">Raddish</a></li> 
+        <li><a class="menu-item" href="#">Chicken</a></li>
+        <li><a class="menu-item" href="#">Beef</a></li> 
         <li><a class="menu-item" href="#">Sushi</a></li> 
       </ul>
     </div>
